--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ h1 {
     transform: translateY(-50%);
     z-index: 999;
     filter: invert(1);
+    pointer-events: none;
 }
 
 .user-form input {
@@ -51,7 +52,7 @@ h1 {
     background-color: #4c2885;
     border: none;
     border-radius: 3rem;
-    color: #fff;
+    color: rgb(39, 51, 73);
     padding: 1rem 3.5rem;
     font-family: inherit;
     font-size: 1rem;
@@ -81,7 +82,7 @@ h1 {
     box-shadow: rgba(0, 0, 0, 0.25) 0px 10px 30px, rgba(255, 255, 255, 0.25) 1px 1px 0px inset, rgba(0, 0, 0, 0.25) 0px -1px 0px inset;
     */
     outline: none;
-
+    color: rgb(39, 51, 73);
     background: linear-gradient(rgb(220, 229, 249) 0%, rgb(242, 247, 255) 100%);
     box-shadow: rgba(200, 210, 230, 0.6) 10px 10px 10px, rgba(255, 255, 255, 0.7) -10px -10px 10px, rgb(187, 200, 230) -1px -1px 3px, rgb(255, 255, 255) 1px 1px 3px, rgb(255, 255, 255) -1px -1px 3px inset, rgb(198, 208, 228) 2px 2px 2px inset;
 }
@@ -155,6 +156,7 @@ h1 {
 footer {
     color: #273349;
     padding: 1.5rem 0;
+    text-align: center;
 }
 
 footer small a {
