--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ h1 {
     text-decoration: none;
     color: #fff;
     background: #5767f9;
-    box-shadow: rgba(76, 93, 242, 0.4) 20px 20px 40px;
+    box-shadow: rgba(76, 93, 242, 0.4) 0 0 20px;
     font-size: 0.7rem;
     padding: 0.25rem 0.5rem;
     margin-right: 0.5rem;
